[gd_scene load_steps=9 format=3 uid="uid://bb2611wtuse72"]

[ext_resource type="Script" path="res://Scenes/game/game_world.gd" id="1_ayi5y"]
[ext_resource type="PackedScene" uid="uid://7pafpo7utcpp" path="res://Scenes/game/tank/underwater.tscn" id="2_yd0gd"]
[ext_resource type="PackedScene" uid="uid://dm5rs8fx0vnle" path="res://Scenes/menu/pause/pause_menu.tscn" id="3_ru30w"]
[ext_resource type="Texture2D" uid="uid://c7n0dkn264x0f" path="res://art/flake_1.png" id="4_j3w7t"]
[ext_resource type="Script" path="res://Scripts/DebugStats.gd" id="5_hgqng"]
[ext_resource type="Script" path="res://Scenes/game/FishStateContainer.gd" id="5_l8hwt"]
[ext_resource type="Script" path="res://Scenes/InterfaceManager.gd" id="6_btoso"]
[ext_resource type="LabelSettings" uid="uid://s5caed4j5v6a" path="res://Resources/new_label_settings.tres" id="7_4vf33"]

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_ayi5y")
start_tank = ExtResource("2_yd0gd")

[node name="Tanks" type="Node2D" parent="."]
process_mode = 1

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource("3_ru30w")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="DebugStats" type="MarginContainer" parent="CanvasLayer"]
offset_right = 250.0
offset_bottom = 500.0
script = ExtResource("5_hgqng")

[node name="Panel" type="Panel" parent="CanvasLayer/DebugStats"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugStats/Panel"]
layout_mode = 2
offset_right = 250.0
offset_bottom = 500.0

[node name="FishStateContainer" type="VBoxContainer" parent="CanvasLayer/DebugStats/Panel"]
layout_mode = 2
offset_right = 250.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_l8hwt")

[node name="HungerLabel" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Food:"
label_settings = ExtResource("7_4vf33")

[node name="HungerValue" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer/HungerLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "100"
label_settings = ExtResource("7_4vf33")

[node name="EnergyLabel" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Energy:"
label_settings = ExtResource("7_4vf33")

[node name="EnergyValue" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer/EnergyLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "100"
label_settings = ExtResource("7_4vf33")

[node name="SizeLabel" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Size:"
label_settings = ExtResource("7_4vf33")

[node name="SizeValue" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer/SizeLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "1.0"
label_settings = ExtResource("7_4vf33")

[node name="HealthLabel" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Health:"
label_settings = ExtResource("7_4vf33")

[node name="HealthValue" type="Label" parent="CanvasLayer/DebugStats/Panel/FishStateContainer/HealthLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "1.0"
label_settings = ExtResource("7_4vf33")

[node name="InterfaceManager" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 563.0
offset_right = 1150.0
offset_bottom = 650.0
script = ExtResource("6_btoso")

[node name="Panel" type="Panel" parent="CanvasLayer/InterfaceManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HCont" type="HBoxContainer" parent="CanvasLayer/InterfaceManager/Panel"]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="FlakeFoodButton" type="Button" parent="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer"]
layout_mode = 2
text = "Flake Food"

[node name="SpawnGreenPlantButton" type="Button" parent="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer"]
layout_mode = 2
text = "GreenPlant"

[node name="ResourceContainer" type="VBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 2

[node name="FlakeFoodLabel" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/ResourceContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "FlakeFood:"
vertical_alignment = 1

[node name="FlakeFoodValue" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/ResourceContainer/MarginContainer/FlakeFoodLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "100"
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 2

[node name="LiveFoodLabel" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/ResourceContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "LiveFood:"
vertical_alignment = 1

[node name="LiveFoodValue" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/ResourceContainer/MarginContainer2/LiveFoodLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "100"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="SpawnGreenFishButton" type="Button" parent="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer2"]
layout_mode = 2
text = "Add Green Fish"

[node name="SpawnOrangeFishButton" type="Button" parent="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer2"]
layout_mode = 2
text = "Add OrangeFish"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2

[node name="TankTemp" type="VBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HBoxCont" type="HBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp"]
layout_mode = 2

[node name="TankTempLabel" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxCont"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Tank Temp: "
vertical_alignment = 1

[node name="TankTempValue" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxCont"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
text = "88"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp"]
layout_mode = 2

[node name="TankTempUp" type="Button" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="TargetTemp" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "88"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TankTempDown" type="Button" parent="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="TankStatsContainer" type="VBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="TankO2Label" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Tank O2:"

[node name="TankO2Value" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer/TankO2Label"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "100"

[node name="FoodQuantLabel" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "TankFood:"

[node name="FoodQuantValue" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer/FoodQuantLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "0.0"

[node name="WasteLabel" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Waste:"

[node name="WasteValue" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer/WasteLabel"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "0.0"

[node name="TankStatsContainer2" type="VBoxContainer" parent="CanvasLayer/InterfaceManager/Panel/HCont"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="NH3Label" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Ammonia:"

[node name="NH3Value" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer2/NH3Label"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "0.0"

[node name="NO2Label" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "NO2:"

[node name="NO2Value" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer2/NO2Label"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "100"

[node name="NO3Label" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "NO3:"

[node name="NO3Value" type="Label" parent="CanvasLayer/InterfaceManager/Panel/HCont/TankStatsContainer2/NO3Label"]
layout_mode = 2
offset_left = 89.0
offset_right = 189.0
offset_bottom = 26.0
text = "0.0"

[node name="Camera_Focus" type="Node2D" parent="."]
position = Vector2(575, 322)

[node name="Camera2D" type="Camera2D" parent="Camera_Focus"]

[node name="Sprite2D" type="Sprite2D" parent="Camera_Focus"]
visible = false
rotation = 1.68075
texture = ExtResource("4_j3w7t")

[connection signal="button_down" from="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer/FlakeFoodButton" to="CanvasLayer/InterfaceManager" method="_on_flake_food_button_button_down"]
[connection signal="button_up" from="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer/SpawnGreenPlantButton" to="CanvasLayer/InterfaceManager" method="_on_spawn_green_plant_button_button_up"]
[connection signal="button_up" from="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer2/SpawnGreenFishButton" to="CanvasLayer/InterfaceManager" method="_on_spawn_green_fish_button_button_up"]
[connection signal="button_up" from="CanvasLayer/InterfaceManager/Panel/HCont/VBoxContainer2/SpawnOrangeFishButton" to="CanvasLayer/InterfaceManager" method="_on_spawn_fish_button_button_up"]
[connection signal="button_up" from="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxContainer/TankTempUp" to="CanvasLayer/InterfaceManager" method="_on_tank_temp_up_button_up"]
[connection signal="button_up" from="CanvasLayer/InterfaceManager/Panel/HCont/MarginContainer/TankTemp/HBoxContainer/TankTempDown" to="CanvasLayer/InterfaceManager" method="_on_tank_temp_down_button_up"]
